DDF-884 - added check for  env var to set the catalog's data dir